# wasmcloud-advent-of-code-2022

./: .gitignore  README.md
advent-of-code-interface/: adventofcode.smithy  codegen.toml
advent-of-code-interface/rust/: Cargo.toml
advent-of-code-interface/rust/src/: adventofcode.rs  lib.rs
aoc-solution/: Makefile  aocsolution.smithy  codegen.toml
aoc-solution/rust/: Cargo.toml
aoc-solution/rust/src/: aocsolution.rs  lib.rs
template/: Cargo.toml  README.md  input_part_1.txt  project-generate.toml  wasmcloud.toml
template/src/: lib.rs
